# ProjectHunters

./: .gitignore  README.md
Assets/Input/: MainControls.cs  MainControls.inputactions
Assets/LootLockerSDK/Resources/Config/: LootLockerConfig.asset
Assets/Prefabs/: CommunicationManager.prefab  EnemyManager.prefab  GameManager.prefab  InventoryManager.prefab  LootLockerManager.prefab  Main Camera.prefab  Menu.prefab  atze.prefab  bullet.prefab  enemy_bullet.prefab  player.prefab
Assets/Prefabs/Bullets/: enemy_bullet.prefab  player_bullet.prefab
Assets/Prefabs/Items/: Boots.prefab  Gloves.prefab  Leaf.prefab  MightRing.prefab
Assets/Prefabs/Weapons/: basic_gun.prefab  cross_gun.prefab
Assets/Prefabs/enemies/: chaser.prefab  dash_chaser.prefab  enemy.prefab  turret.prefab
Assets/Scenes/: HighscoreScene.unity  LargeTestScene.unity  MenuScene.unity  SampleScene.unity  SimpleLevel.unity
Assets/Scripts/Bullets/: BasicBullet.cs
Assets/Scripts/Enemies/: DashEnemy.cs  EnemyStats.cs  LookAtPlayer.cs  MoveToPlayer.cs  ShootAtPlayer.cs
Assets/Scripts/Items/: DropItem.cs  PassiveItem.cs  PassiveItemScriptableObject.cs
Assets/Scripts/Items/ItemImplementations/: DamageIncrease.cs  DamageUp.asset  FireRateIncrease.asset  FireRateIncrease.cs  Heal.asset  Heal.cs  HealthIncrease.asset  HealthIncrease.cs  SpeedIncrease.asset  SpeedIncrease.cs
Assets/Scripts/Managers/: InventoryManager.cs  ObjectPoolManager.cs  PlayerStatManager.cs  SceneLoader.cs  SpacePartitionManager.cs  SpawnPlayerStartEquipment.cs  SpawnPlayerStartWeapon.cs  StatManager.cs
Assets/Scripts/Managers/EnemySpawner/: EnemySpawner.cs  Wave.cs
Assets/Scripts/Managers/LootLocker/: LeaderBoardManager.cs  LootLockerManager.cs  LootLockerPlayerManager.cs  ShowScores.cs
Assets/Scripts/Managers/Menu/: LootLockerManager.cs  MenuManger.cs
Assets/Scripts/PlayerMovement/: BasicMovement.cs  CameraFollow.cs  MovementDash.cs  PlayerMovement.cs  testManger.cs
Assets/Scripts/ReinforcementLearningAgent/: CommunicationManager.prefab  Messenges.cs  ReinforcementLearningController.cs  UDPReceiver.cs
Assets/Scripts/Weapons/: BasicWeaponStats.cs  BulletWeapon.cs  BulletWeaponStats.cs  PlayerWeapon.cs  ShootCross.cs  ShootNearestEnemy.cs
Assets/Scripts/Weapons/WeaponImplementations/: BasicShootCrossWeaponStats.asset  BasicShootNearWeaponStats.asset  ShootCross.cs  ShootNearestEnemy.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
python_reinforcement_learning/: README.md  linting.cmd  pyproject.toml
python_reinforcement_learning/python_reinforcement_learning/: test_training.ipynb
python_reinforcement_learning/python_reinforcement_learning/gym_environment/: configs.py  mock_symulation.py  project_hunter_environment.py  render_utils.py
python_reinforcement_learning/python_reinforcement_learning/inference/: rllib_inference.py
python_reinforcement_learning/python_reinforcement_learning/training/: rllib_train.py
python_reinforcement_learning/python_reinforcement_learning/udp_communicator/: messages.py  messeges.py  udp_receiver.py  udp_sender.py
python_reinforcement_learning/rllib_checkpoints/: algorithm_state.pkl  rllib_checkpoint.json
python_reinforcement_learning/rllib_checkpoints/policies/default_policy/: policy_state.pkl
python_reinforcement_learning/tests/: testlogs.txt
(+5 files in other folders)
