[tool.poetry]
name = "python-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Bussler <maarten.bussler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
udp = "python_reinforcement_learning.udp_communicator.udp_receiver:main"
udp_send_test = "python_reinforcement_learning.udp_communicator.udp_sender:main"
udp_stop = "python_reinforcement_learning.udp_communicator.udp_sender:stop"
udp_resume = "python_reinforcement_learning.udp_communicator.udp_sender:resume"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"