[tool.poetry]
name = "python-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Bussler <maarten.bussler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
ray = {extras = ["rllib"], version = "^2.9.3"}
pygame = "^2.5.2"
pydantic = "^2.7.0"
torch = {version = "^2.2.2+cu118", source = "pytorch-gpu-src"}
torchvision = {version = "^0.17.2+cu118", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.2.2+cu118", source = "pytorch-gpu-src"}


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
udp = "python_reinforcement_learning.udp_communicator.udp_receiver:main"
udp_send_test = "python_reinforcement_learning.udp_communicator.udp_sender:main"
udp_stop = "python_reinforcement_learning.udp_communicator.udp_sender:stop"
udp_resume = "python_reinforcement_learning.udp_communicator.udp_sender:resume"
udp_restart = "python_reinforcement_learning.udp_communicator.udp_sender:restart"
train_rllib = "python_reinforcement_learning.training.rllib_train:train_rllib"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"